run initial migration

--- a/PierreTreats/Views/Home/Index.cshtml
+++ b/PierreTreats/Views/Home/Index.cshtml
@@ -4,7 +4,7 @@
 
 @using PierreTreats.Models;
 
-<h1>Factory Database</h1>
+<h1>Pierre's Treats</h1>
 <div class="row">
     <div class="col-6">
         <h3>Treats:</h3> 
