--- a/PierreTreats/Views/Shared/_Layout.cshtml
+++ b/PierreTreats/Views/Shared/_Layout.cshtml
@@ -9,7 +9,7 @@
         <nav class="navbar navbar-expand-lg navbar-light bg-light justify-content-center">
             <div class="navbar-nav">
                 <a class="nav-item nav-link active" href="/">Home</a>
-                <a class="nav-item nav-link" href="/treasts">Treats</a>
+                <a class="nav-item nav-link" href="/treats">Treats</a>
                 <a class="nav-item nav-link" href="/flavors">Flavors</a>
             </div>
         </nav>
