add all views for treats

--- a/PierreTreats/Views/Home/Index.cshtml
+++ b/PierreTreats/Views/Home/Index.cshtml
@@ -14,7 +14,7 @@
                 <li>@Html.ActionLink($"{treat.TreatName}", "Details", "Treats", new { id = treat.TreatId })</li>
             </ul>
         }
-        <h5>@Html.ActionLink("View Treats Only", "Index", "Engineers")</h3>
+        <h5>@Html.ActionLink("View Treats Only", "Index", "Treats")</h3>
     </div>
     <div class="col-6">
         <h3>Flavors:</h3>
