add account link to navbar

--- a/PierreTreats/Views/Shared/_Layout.cshtml
+++ b/PierreTreats/Views/Shared/_Layout.cshtml
@@ -11,6 +11,7 @@
                 <a class="nav-item nav-link active" href="/">Home</a>
                 <a class="nav-item nav-link" href="/treats">Treats</a>
                 <a class="nav-item nav-link" href="/flavors">Flavors</a>
+                <a class="nav-item nav-link" href="/account">Account</a>
             </div>
         </nav>
         <div class="container">
