add login link to account index

--- a/PierreTreats/Views/Account/Index.cshtml
+++ b/PierreTreats/Views/Account/Index.cshtml
@@ -15,6 +15,7 @@ else
 {
     <hr />
     <p>@Html.ActionLink("Register", "Register")</p>
+    <p>@Html.ActionLink("Log in", "Login")</p>
 }
 
 <p>@Html.ActionLink("Home", "Index", "Home")</p>
