--- a/PierreTreats/Views/Account/Register.cshtml
+++ b/PierreTreats/Views/Account/Register.cshtml
@@ -2,19 +2,22 @@
   Layout = "_Layout";
 }
 
-<h2>Authentication with Identity</h2>
-@if (User.Identity.IsAuthenticated)
-{
-    <p>Hello @User.Identity.Name!</p>
-    @using (Html.BeginForm("LogOff", "Account"))
-    {
-        <input type="submit" class="btn btn-default" value="Log Out" />
-    } 
-}
-else
-{
-    <hr />
-    <p>@Html.ActionLink("Register", "Register")</p>
-}
+@using PierreTreats.ViewModels
 
-<p>@Html.ActionLink("Home", "Index", "Home")</p>
+@model RegisterViewModel
+
+<h2>Register a new user</h2>
+<hr />
+@using (Html.BeginForm("Register", "Account", FormMethod.Post))
+{
+  @Html.LabelFor(user => user.Email)
+  @Html.TextBoxFor(user => user.Email)
+
+  @Html.LabelFor(user => user.Password)
+  @Html.PasswordFor(user => user.Password)
+
+  @Html.LabelFor(user => user.ConfirmPassword)
+  @Html.PasswordFor(user => user.ConfirmPassword)
+
+  <input type="submit" value="Register" />
+}
